# lambdabot

./: .gitignore  .travis.yml  README.md  cabal-build-all.sh  cabal-clean-all.sh  cabal.project  cabal2nix-all.nix  cabal2nix-all.sh  compiler.nix  default.nix  hie.nix  hie.yaml  nixpkgs.nix  run.sh  shell.nix  uninstall.sh  using-nix-setup.txt  vscode-old.nix  vscode-personal.nix  vscode.nix
.devcontainer/: Dockerfile  devcontainer.json
lambdabot/: LICENSE  default.nix  lambdabot.cabal  project.nix  result
lambdabot-core/: AUTHORS.md  default.nix  lambdabot-core.cabal  project.nix  result
lambdabot-core/src/Lambdabot/: Bot.hs  ChanName.hs  Command.hs  Config.hs  File.hs  IRC.hs  Logging.hs  Main.hs  Message.hs  Module.hs  Monad.hs  Nick.hs  Plugin.hs  State.hs  Util.hs
lambdabot-core/src/Lambdabot/Compat/: AltTime.hs  FreenodeNick.hs  PackedNick.hs
lambdabot-core/src/Lambdabot/Config/: Core.hs
lambdabot-core/src/Lambdabot/Plugin/: Core.hs
lambdabot-core/src/Lambdabot/Plugin/Core/: Base.hs  Compose.hs  Help.hs  More.hs  OfflineRC.hs  System.hs  Version.hs
lambdabot-core/src/Lambdabot/Util/: Serial.hs  Signals.hs
lambdabot-dashboard-plugins/: LICENSE  lambdabot-dashboard-plugins.cabal
lambdabot-dashboard-plugins/src/Lambdabot/Config/: Dashboard.hs
lambdabot-dashboard-plugins/src/Lambdabot/Plugin/: Dashboard.hs
lambdabot-dashboard-plugins/src/Lambdabot/Plugin/Dashboard/: Configuration.hs  Dashboard.hs  Garbage.hs  Service.hs  StateChange.hs
lambdabot-hangman-plugins/: lambdabot-hangman-plugins.cabal  project.nix  result
lambdabot-hangman-plugins/src/Lambdabot/Config/: Hangman.hs
lambdabot-hangman-plugins/src/Lambdabot/Plugin/: Hangman.hs
lambdabot-hangman-plugins/src/Lambdabot/Plugin/Hangman/: Background.hs  Configuration.hs  Game.hs  Hangman.hs  Logic.hs  Manage.hs
lambdabot-haskell-plugins/: default.nix  lambdabot-haskell-plugins.cabal  project.nix  result
lambdabot-haskell-plugins/src/Lambdabot/Config/: Haskell.hs
lambdabot-haskell-plugins/src/Lambdabot/Plugin/: Haskell.hs
lambdabot-haskell-plugins/src/Lambdabot/Plugin/Haskell/: Check.hs  Djinn.hs  Eval.hs  Free.hs  Haddock.hs  Hoogle.hs  Instances.hs  Pl.hs  Pointful.hs  Pretty.hs  Source.hs  Type.hs  UnMtl.hs  Undo.hs
lambdabot-haskell-plugins/src/Lambdabot/Plugin/Haskell/Free/: Expr.hs  FreeTheorem.hs  Parse.hs  Test.hs  Theorem.hs  Type.hs  Util.hs
lambdabot-haskell-plugins/src/Lambdabot/Util/: Parser.hs
lambdabot-irc-plugins/: lambdabot-irc-plugins.cabal  project.nix  result
lambdabot-irc-plugins/src/Lambdabot/Config/: IRC.hs
lambdabot-irc-plugins/src/Lambdabot/Plugin/: IRC.hs
lambdabot-irc-plugins/src/Lambdabot/Plugin/IRC/: IRC.hs  Localtime.hs  Log.hs  Topic.hs
lambdabot-misc-plugins/: lambdabot-misc-plugins.cabal  project.nix  result
lambdabot-misc-plugins/src/Lambdabot/Plugin/: Misc.hs
lambdabot-misc-plugins/src/Lambdabot/Plugin/Misc/: Dummy.hs  Error.hs  Fresh.hs  Hello.hs  Stats.hs  Todo.hs
lambdabot-misc-plugins/src/Lambdabot/Plugin/Misc/Dummy/: DocAssocs.hs  genDocAssocs.hs
lambdabot-novelty-plugins/: default.nix  lambdabot-novelty-plugins.cabal  project.nix  result
lambdabot-novelty-plugins/src/Lambdabot/Config/: Novelty.hs
lambdabot-novelty-plugins/src/Lambdabot/Plugin/: Novelty.hs
lambdabot-novelty-plugins/src/Lambdabot/Plugin/Novelty/: BF.hs  Dice.hs  Elite.hs  Filter.hs  Numberwang.hs  Quote.hs  Slap.hs  Unlambda.hs  Vixen.hs
lambdabot-novelty-plugins/src/Lambdabot/Util/: Process.hs
lambdabot-points-plugins/: LICENSE  lambdabot-points-plugins.cabal  project.nix  result
lambdabot-points-plugins/src/Lambdabot/Config/: Points.hs
lambdabot-points-plugins/src/Lambdabot/Plugin/: Points.hs
lambdabot-points-plugins/src/Lambdabot/Plugin/Points/: Points.hs
lambdabot-reference-plugins/: default.nix  lambdabot-reference-plugins.cabal  project.nix  result
lambdabot-reference-plugins/src/Lambdabot/Config/: Reference.hs
lambdabot-reference-plugins/src/Lambdabot/Plugin/: Reference.hs
lambdabot-reference-plugins/src/Lambdabot/Plugin/Reference/: Dict.hs  Metar.hs  OEIS.hs  Search.hs  Spell.hs  Ticker.hs  Url.hs  Where.hs
lambdabot-reference-plugins/src/Lambdabot/Plugin/Reference/Dict/: DictLookup.hs
lambdabot-reference-plugins/src/Lambdabot/Util/: Browser.hs
lambdabot-social-plugins/: lambdabot-social-plugins.cabal  project.nix  result
lambdabot-social-plugins/src/Lambdabot/Plugin/: Social.hs
lambdabot-social-plugins/src/Lambdabot/Plugin/Social/: Activity.hs  Karma.hs  Poll.hs  Seen.hs  Tell.hs
lambdabot-social-plugins/src/Lambdabot/Util/: NickEq.hs
lambdabot-story-plugins/: lambdabot-story-plugins.cabal
lambdabot-story-plugins/src/: RunDocTests.hs
lambdabot-story-plugins/src/Lambdabot/Config/: Story.hs
lambdabot-story-plugins/src/Lambdabot/Plugin/: Story.hs
lambdabot-story-plugins/src/Lambdabot/Plugin/Story/: Configuration.hs  Story.hs
lambdabot-suggest-plugins/: default.nix  lambdabot-suggest-plugins.cabal  project.nix  result
lambdabot-suggest-plugins/src/Lambdabot/Config/: Suggest.hs
lambdabot-suggest-plugins/src/Lambdabot/Plugin/: Suggest.hs
lambdabot-suggest-plugins/src/Lambdabot/Plugin/Suggest/: Suggest.hs
lambdabot-term-plugins/: LICENSE  lambdabot-term-plugins.cabal  project.nix
lambdabot-term-plugins/src/: RunDocTests.hs
lambdabot-term-plugins/src/Lambdabot/Config/: Term.hs
lambdabot-term-plugins/src/Lambdabot/Plugin/: Term.hs
lambdabot-term-plugins/src/Lambdabot/Plugin/Term/: Configuration.hs  Logic.hs  Term.hs
lambdabot-trusted/: default.nix  project.nix  result
lambdabot-trusted-plugins/: lambdabot-trusted-plugins.cabal  project.nix
lambdabot-twitch-plugins/: default.nix  lambdabot-twitch-plugins.cabal  project.nix  readme.md  result
lambdabot-twitch-plugins/src/Lambdabot/Config/: Twitch.hs
lambdabot-twitch-plugins/src/Lambdabot/Plugin/: Twitch.hs
lambdabot-twitch-plugins/src/Lambdabot/Plugin/Twitch/: Twitch.hs
lambdabot/html/: index.html  styles.css
lambdabot/scripts/: passwd.rc.sample
lambdabot/src/: Main.hs  Modules.hs
nix/: shell.nix  template.nix
(+14 files in other folders)
