name:                   lambdabot-core
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               Lambdabot core functionality
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Manage plugins, network connections, configurations
                        and much more.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.2

extra-source-files:     AUTHORS.md
                        COMMENTARY.md
                        README.md

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  default-language:     Haskell2010
  
  exposed-modules:      Lambdabot.Bot
                        Lambdabot.ChanName
                        Lambdabot.Command
                        Lambdabot.Compat.AltTime
                        Lambdabot.Compat.FreenodeNick
                        Lambdabot.Compat.PackedNick
                        Lambdabot.Config
                        Lambdabot.Config.Core
                        Lambdabot.File
                        Lambdabot.IRC
                        Lambdabot.Logging
                        Lambdabot.Main
                        Lambdabot.Message
                        Lambdabot.Module
                        Lambdabot.Monad
                        Lambdabot.Nick
                        Lambdabot.Plugin
                        Lambdabot.Plugin.Core
                        Lambdabot.State
                        Lambdabot.Util
                        Lambdabot.Util.Signals
                        Lambdabot.Util.Serial
                        Paths_lambdabot_core
                        Lambdabot.Plugin.Core.Base
                        Lambdabot.Plugin.Core.Compose
                        Lambdabot.Plugin.Core.Help
                        Lambdabot.Plugin.Core.More
                        Lambdabot.Plugin.Core.OfflineRC
                        Lambdabot.Plugin.Core.System
                        Lambdabot.Plugin.Core.Version

  build-depends:        base,
                        binary,
                        bytestring,
                        containers,
                        dependent-map,
                        dependent-sum,
                        dependent-sum-template,
                        directory,
                        edit-distance,
                        exceptions,
                        exception-transformers,
                        filepath,
                        haskeline,
                        hslogger,
                        HTTP,
                        lifted-base,
                        monad-control,
                        mtl,
                        network == 2.6.3.6,
                        these,
                        time,
                        parsec,
                        prim-uniq,
                        random,
                        random-fu,
                        random-source,
                        regex-tdfa,
                        SafeSemaphore,
                        split,
                        syb,
                        template-haskell,
                        transformers,
                        transformers-base,
                        utf8-string,
                        zlib

  if !os(windows)
    build-depends:      unix
