name:                   lambdabot-hangman-plugins
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 Joseph Woolley
maintainer:             

category:               Development, Web
synopsis:               Hangman plugins for Lambdabot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.1

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  exposed-modules:      Lambdabot.Plugin.Hangman
  other-modules:        Lambdabot.Config.Hangman
                        Lambdabot.Plugin.Hangman.Hangman
                        Lambdabot.Plugin.Hangman.Logic

  -- other-modules:

  build-depends:        base                    >= 4.4 && < 5,
                        binary                  >= 0.5,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        dice                    >= 0.1,
                        directory               >= 1.1,
                        lambdabot-core          >= 5.1 && < 5.2,
                        mtl                     >= 2,
                        misfortune              >= 0.1,
                        process                 >= 1.1,
                        random-fu               >= 0.2.6.2,
                        regex-tdfa              >= 1.1,
                        split                   >= 0.2,
                        extra                   >= 1.0,
                        aeson                   >= 1.4.4.0,
                        random                  >= 1.1
