name:                   lambdabot-misc-plugins
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               Lambdabot miscellaneous plugins 
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:
                        .
                        [dummy] Many commands with fixed replies.
                        .
                        [error] Debug error handling.
                        .
                        [fresh] Generate Haskell project names.
                        .
                        [hello] Hello, world.
                        .
                        [stats] Ad-hoc statsd queries.
                        .
                        [todo] A to-do list for lambdabot.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.2

source-repository head
  type:                 git
  location:             https://github.com/calledtoconstruct/lambdabot.git

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -Wmissing-signatures
                        -funbox-strict-fields
                        
  default-language:     Haskell2010

  exposed-modules:      Lambdabot.Plugin.Misc
  
  other-modules:        Lambdabot.Plugin.Misc.Dummy
                        Lambdabot.Plugin.Misc.Error
                        Lambdabot.Plugin.Misc.Fresh
                        Lambdabot.Plugin.Misc.Hello
                        Lambdabot.Plugin.Misc.Stats
                        Lambdabot.Plugin.Misc.Todo

  other-modules:        Lambdabot.Plugin.Misc.Dummy.DocAssocs

  build-depends:        base,
                        bytestring,
                        containers,
                        filepath,
                        hstatsd,
                        lambdabot-core == 5.1.0.4,
                        lifted-base,
                        mtl,
                        text,
                        zlib
