name:                   lambdabot-points-plugins
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 Joseph Woolley
maintainer:             

category:               Development, Web
synopsis:               Points plugins for Lambdabot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.1

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  exposed-modules:      Lambdabot.Plugin.Points
  other-modules:        Lambdabot.Config.Points
                        Lambdabot.Plugin.Points.Points

  -- other-modules:

  build-depends:        base,
                        binary,
                        bytestring,
                        containers,
                        dice,
                        directory,
                        lambdabot-core == 5.1.0.4,
                        mtl,
                        misfortune,
                        process,
                        random-fu,
                        regex-tdfa,
                        zlib,
                        split
