name:                   lambdabot-reference-plugins
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               Lambdabot reference plugins.
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:
                        .
                        [dict] Query various dictionaries.
                        .
                        [metar] Look up avian weather reports.
                        .
                        [oeis] Look up number sequences on OEIS.
                        .
                        [search] Query search engines.
                        .
                        [spell] Check spelling of wrods.
                        .
                        [ticker] Look up stock quotes.
                        .
                        [url] Display titles of URLs on channels.
                        .
                        [where] Manage and query a key-URL list.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.2

source-repository head
  type:                 git
  location:             https://github.com/calledtoconstruct/lambdabot.git

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields
                        
  default-language:     Haskell2010

  exposed-modules:      Lambdabot.Plugin.Reference
  
  other-modules:        Lambdabot.Plugin.Reference.Dict
                        Lambdabot.Plugin.Reference.Metar
                        Lambdabot.Plugin.Reference.OEIS
                        Lambdabot.Plugin.Reference.Search
                        Lambdabot.Plugin.Reference.Spell
                        Lambdabot.Plugin.Reference.Ticker
                        Lambdabot.Plugin.Reference.Url
                        Lambdabot.Plugin.Reference.Where
                        Lambdabot.Plugin.Reference.Dict.DictLookup

  other-modules:        Lambdabot.Config.Reference
                        Lambdabot.Util.Browser

  build-depends:        base,
                        bytestring,
                        containers,
                        case-insensitive,
                        exceptions,
                        HTTP,
                        http-conduit,
                        http-types,
                        html-conduit,
                        lambdabot-core == 5.1.0.4,
                        lifted-base,
                        mtl,
                        network,
                        oeis,
                        process,
                        regex-tdfa,
                        split,
                        text,
                        text-format,
                        xml-conduit,
                        xml-types
