name:                   lambdabot-suggest-plugins
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 Joseph Woolley
maintainer:             

category:               Development, Web
synopsis:               Suggest plugins for Lambdabot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:
                        .
                        [suggest] Add a suggestion.
                        .
                        [suggestions] List suggestions.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.2

source-repository head
  type:                 git
  location:             https://github.com/calledtoconstruct/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields
                        
  default-language:     Haskell2010

  exposed-modules:      Lambdabot.Plugin.Suggest

  other-modules:        Lambdabot.Plugin.Suggest.Suggest

  other-modules:        Lambdabot.Config.Suggest

  build-depends:        base,
                        lambdabot-core == 5.1.0.4
