name:                   lambdabot-term-plugins
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 Joseph Woolley
maintainer:             

category:               Development, Web
synopsis:               Term plugins for Lambdabot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins: add-term, remove-term (rm-term), term

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.2

source-repository head
  type:                 git
  location:             https://github.com/calledtoconstruct/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields
                        
  default-language:     Haskell2010

  exposed-modules:      Lambdabot.Plugin.Term

  other-modules:        Lambdabot.Plugin.Term.Term
                        Lambdabot.Plugin.Term.Logic
                        Lambdabot.Plugin.Term.Configuration

  other-modules:        Lambdabot.Config.Term

  build-depends:        base,
                        lambdabot-core == 5.1.0.4,
                        mtl,
                        text,
                        time

test-suite doctests
  hs-source-dirs:       src
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded
  main-is:              RunDocTests.hs
  build-depends:        base,
                        doctest >= 0.8
  default-language:     Haskell2010
