name:                   lambdabot-twitch-plugins
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 Joseph Woolley
maintainer:             

category:               Development, Web
synopsis:               Twitch plugins for lambdabot.
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:
                        .

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.2

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall -Wmissing-signatures -funbox-strict-fields
  
  default-language:     Haskell2010

  exposed-modules:      Lambdabot.Plugin.Twitch

  other-modules:        Lambdabot.Config.Twitch
                        Lambdabot.Plugin.Twitch.Twitch

  build-depends:        base,
                        bytestring,
                        containers,
                        directory,
                        filepath,
                        lambdabot-core == 5.1.0.4,
                        lifted-base,
                        mtl,
                        network == 2.6.3.6,
                        time,
                        SafeSemaphore,
                        split
